// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should render radio with label 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 9999px;
  background-color: transparent;
  border-color: hsla(214,18%,69%,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.7,0,0.5,1);
  transition-timing-function: cubic-bezier(0.7,0,0.5,1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0px;
}

.c6 {
  margin-bottom: 0px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  margin-left: 4px;
}

.c13 {
  margin-left: 24px;
}

.c3 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c5 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c12 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c9:hover + div,
.c9:focus + div {
  border-color: hsla(214,18%,69%,1);
  background-color: hsla(216,15%,54%,0.09);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

<div>
  <div
    aria-labelledby="radio-group-3-label"
    class="c0"
    data-blade-component="radio-group"
    display="flex"
    role="group"
  >
    <span
      id="radio-group-3-label"
      style="width: auto; flex-shrink: 0; margin-right: 16px; word-break: break-all;"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          display="flex"
        >
          <p
            class="c3 Text__StyledText-wkh56f-0"
            color="surface.text.subdued.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="75"
            font-style="normal"
            font-weight="bold"
          >
            Select fruit
          </p>
          <div
            class="c4"
          >
            <p
              class="c5 Text__StyledText-wkh56f-0"
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              font-family="text"
              font-size="100"
              font-style="normal"
              font-weight="regular"
            />
          </div>
        </div>
      </div>
    </span>
    <div
      class=""
    >
      <div
        class="c0"
        display="flex"
      >
        <div
          class="c6"
        >
          <label
            class="c7"
          >
            <div
              class="c0"
              display="flex"
            >
              <div
                class="c8"
                display="flex"
              >
                <input
                  aria-checked="false"
                  aria-describedby="radio-1-helptext-2"
                  aria-disabled="false"
                  aria-invalid="false"
                  aria-required="false"
                  class="c9"
                  name="radio-group-3"
                  role="radio"
                  type="radio"
                  value="apple"
                />
                <div
                  class="c10"
                />
                <div
                  class="c11"
                />
                <div
                  class="c12"
                  color="surface.text.subtle.lowContrast"
                  font-family="text"
                  font-size="100"
                  font-weight="regular"
                >
                  Apple
                </div>
              </div>
              <div
                class="c13"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Radio /> should set disabled state with isDisabled 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 9999px;
  background-color: transparent;
  border-color: hsla(216,15%,54%,0.18);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.7,0,0.5,1);
  transition-timing-function: cubic-bezier(0.7,0,0.5,1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0px;
}

.c6 {
  margin-bottom: 0px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  margin-left: 4px;
}

.c13 {
  margin-left: 24px;
}

.c3 {
  color: hsla(217,18%,45%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c5 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c12 {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

<div>
  <div
    aria-labelledby="radio-group-10-label"
    class="c0"
    data-blade-component="radio-group"
    display="flex"
    role="group"
  >
    <span
      id="radio-group-10-label"
      style="width: auto; flex-shrink: 0; margin-right: 16px; word-break: break-all;"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          display="flex"
        >
          <p
            class="c3 Text__StyledText-wkh56f-0"
            color="surface.text.subdued.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="75"
            font-style="normal"
            font-weight="bold"
          >
            Select fruit
          </p>
          <div
            class="c4"
          >
            <p
              class="c5 Text__StyledText-wkh56f-0"
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              font-family="text"
              font-size="100"
              font-style="normal"
              font-weight="regular"
            />
          </div>
        </div>
      </div>
    </span>
    <div
      class=""
    >
      <div
        class="c0"
        display="flex"
      >
        <div
          class="c6"
        >
          <label
            class="c7"
          >
            <div
              class="c0"
              display="flex"
            >
              <div
                class="c8"
                display="flex"
              >
                <input
                  aria-checked="false"
                  aria-describedby="radio-11-helptext-12"
                  aria-disabled="true"
                  aria-invalid="false"
                  aria-required="false"
                  class="c9"
                  disabled=""
                  name="radio-group-10"
                  role="radio"
                  type="radio"
                  value="apple"
                />
                <div
                  class="c10"
                />
                <div
                  class="c11"
                />
                <div
                  class="c12"
                  color="surface.text.placeholder.lowContrast"
                  font-family="text"
                  font-size="100"
                  font-weight="regular"
                >
                  Apple
                </div>
              </div>
              <div
                class="c13"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
